--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   app:
     container_name: npm-custom
@@ -7,6 +5,32 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"   # expose le port 3000 du conteneur vers ta machine
+      - "3000:3000"
     volumes:
-      - .:/app        # monte ton code local dans le conteneur (pratique en dev)
+      - .:/app
+    depends_on:
+      - db
+    networks:
+      - network-app
+
+  db:
+    image: mysql:8.0
+    container_name: mysql-db
+    restart: always
+    environment:
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+    networks:
+      - network-app
+
+volumes:
+  db_data:
+
+networks:
+  network-app:
